--- a/index.html
+++ b/index.html
@@ -6,18 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <header class="container-fluid">
-<div class="row h-100 align-items-center">
-    <div class="col">
-        <a href="#" class="text-white text-decoration-none"></a>
+    <div class="container h-100">
+        <div class="row h-100 align-items-center">
+            <div class="col">
+                <div class="test-wh"></div>
+            </div>
+            <div class="text-white col text-end">
+                <span class="border border-info">Test</span>
+            </div>
+        </div>
     </div>
-    <div class="col">
-
-    </div>
-</div>
 </header>
 </body>
 </html>
