--- a/index.html
+++ b/index.html
@@ -22,5 +22,22 @@
         </div>
     </div>
 </header>
+<main>
+    <section class="container-fluid bgc-green">
+        <div class="container">
+            <div class="row pt-5 pb-5 justify-content-center">
+                <div class="col-6">
+                    <div class="card mb-2 test-bl">
+                            <!-- <img src="" alt=""> -->
+                    </div>
+                    <h1 class="test-title h3 mb-2">START BOOTSTRAP</h1>
+                    <div class="test-title mb-2"></div>
+                    <div class="test-title"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+</main>
 </body>
 </html>
