--- a/index.html
+++ b/index.html
@@ -13,31 +13,85 @@
 <header class="container-fluid">
     <div class="container h-100">
         <div class="row h-100 align-items-center">
-            <div class="col">
-                <div class="test-wh"></div>
-            </div>
-            <div class="text-white col text-end">
-                <span class="border border-info">Test</span>
+            <div class="col d-flex justify-content-between align-items-center">
+                    <div class="test-wh"></div>               
+                    <nav>
+                        <span class="border border-info d-md-none">Test</span>
+                        <ul class="list-inline d-none d-md-block">
+                            <li class="test-wh list-inline-item"></li>
+                            <li class="test-wh list-inline-item"></li>
+                            <li class="test-wh list-inline-item"></li>
+                        </ul>
+                    </nav>
             </div>
         </div>
     </div>
 </header>
 <main>
-    <section class="container-fluid bgc-green">
+
+    <!-- Start Bootstrap -->
+
+    <section class="container-fluid bgc-green mb-5" id="start-bootstrap">
         <div class="container">
             <div class="row pt-5 pb-5 justify-content-center">
-                <div class="col-6">
-                    <div class="card mb-2 test-bl">
-                            <!-- <img src="" alt=""> -->
+                <div class="col ">
+                    <div class="card d-flex align-items-center mb-2">
+                            <div class="test-bl mb-2"><!-- <img src="" alt=""> --></div>
+                            <h1 class="test-title h3 mb-2"></h1>
+                            <div class="test-title mb-2"></div>
+                            <div class="test-title"></div>
                     </div>
-                    <h1 class="test-title h3 mb-2">START BOOTSTRAP</h1>
-                    <div class="test-title mb-2"></div>
-                    <div class="test-title"></div>
                 </div>
             </div>
         </div>
     </section>
 
+    <!-- Portfolio -->
+
+    <section class="container-fluid" id="portfolio">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 d-flex flex-column align-items-center">
+                    <div class="test-title mb-3"></div>
+                    <div class="test-title mb-3"></div>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row gx-4 gy-4 justify-content-center justify-content-md-between">
+                <div class="test-portfolio d-flex justify-content-center align-items-center col-sm-12 col-md-6">
+                    <div class="test-bl card">
+                        <!-- <img src="" alt=""> -->
+                    </div>
+                </div>
+                <div class="test-portfolio d-flex justify-content-center align-items-center col-sm-12 col-md-6">
+                    <div class="test-bl card">
+                        <!-- <img src="" alt=""> -->
+                    </div>
+                </div>
+                <div class="test-portfolio d-flex justify-content-center align-items-center col-sm-12 col-md-6">
+                    <div class="test-bl card">
+                        <!-- <img src="" alt=""> -->
+                    </div>
+                </div>
+                <div class="test-portfolio d-flex justify-content-center align-items-center col-sm-12 col-md-6">
+                    <div class="test-bl card">
+                        <!-- <img src="" alt=""> -->
+                    </div>
+                </div>
+                <div class="test-portfolio d-flex justify-content-center align-items-center col-sm-12 col-md-6">
+                    <div class="test-bl card">
+                        <!-- <img src="" alt=""> -->
+                    </div>
+                </div>
+                <div class="test-portfolio d-flex justify-content-center align-items-center col-sm-12 col-md-6">
+                    <div class="test-bl card">
+                        <!-- <img src="" alt=""> -->
+                    </div>
+                </div>
+           </div>
+        </div>
+    </section>
 </main>
 </body>
 </html>
