--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 
     <!-- Start Bootstrap -->
 
-    <section class="container-fluid bgc-green mb-5" id="start-bootstrap">
+    <section class="container-fluid bgc-green mb-5 py-5" id="start-bootstrap">
         <div class="container">
-            <div class="row pt-5 pb-5 justify-content-center">
-                <div class="col ">
+            <div class="row justify-content-center">
+                <div class="col">
                     <div class="card d-flex align-items-center mb-2">
                             <div class="test-bl mb-2"><!-- <img src="" alt=""> --></div>
                             <h1 class="test-title h3 mb-2"></h1>
@@ -48,7 +48,7 @@
 
     <!-- Portfolio -->
 
-    <section class="container-fluid" id="portfolio">
+    <section class="container-fluid mb-5" id="portfolio">
         <div class="container">
             <div class="row">
                 <div class="col-12 d-flex flex-column align-items-center">
@@ -57,34 +57,34 @@
                 </div>
             </div>
         </div>
-        <div class="container">
-            <div class="row gx-4 gy-4 justify-content-center justify-content-md-between">
-                <div class="test-portfolio d-flex justify-content-center align-items-center col-sm-12 col-md-6">
+        <div class="container mb-5">
+            <div class="row gx-4 gy-4 justify-content-center justify-content-sm-center justify-content-md-between">
+                <div class="test-portfolio d-flex justify-content-center align-items-center col-sm-12 col-md-6 col-lg-4">
                     <div class="test-bl card">
                         <!-- <img src="" alt=""> -->
                     </div>
                 </div>
-                <div class="test-portfolio d-flex justify-content-center align-items-center col-sm-12 col-md-6">
+                <div class="test-portfolio d-flex justify-content-center align-items-center col-12 col-md-6 col-lg-4">
                     <div class="test-bl card">
                         <!-- <img src="" alt=""> -->
                     </div>
                 </div>
-                <div class="test-portfolio d-flex justify-content-center align-items-center col-sm-12 col-md-6">
+                <div class="test-portfolio d-flex justify-content-center align-items-center col-12 col-md-6 col-lg-4">
                     <div class="test-bl card">
                         <!-- <img src="" alt=""> -->
                     </div>
                 </div>
-                <div class="test-portfolio d-flex justify-content-center align-items-center col-sm-12 col-md-6">
+                <div class="test-portfolio d-flex justify-content-center align-items-center col-12 col-md-6 col-lg-4">
                     <div class="test-bl card">
                         <!-- <img src="" alt=""> -->
                     </div>
                 </div>
-                <div class="test-portfolio d-flex justify-content-center align-items-center col-sm-12 col-md-6">
+                <div class="test-portfolio d-flex justify-content-center align-items-center col-12 col-md-6 col-lg-4">
                     <div class="test-bl card">
                         <!-- <img src="" alt=""> -->
                     </div>
                 </div>
-                <div class="test-portfolio d-flex justify-content-center align-items-center col-sm-12 col-md-6">
+                <div class="test-portfolio d-flex justify-content-center align-items-center col-12 col-md-6 col-lg-4">
                     <div class="test-bl card">
                         <!-- <img src="" alt=""> -->
                     </div>
@@ -92,6 +92,57 @@
            </div>
         </div>
     </section>
+
+    <!-- About -->
+
+    <section class="container-fluid mb-5 bgc-green" id="about">
+        <div class="container py-4 px-3 py-md-5">
+            <div class="row">
+                <div class="col-12 d-flex flex-column align-items-center">
+                    <div class="test-title mb-3"></div>
+                    <div class="test-title mb-3"></div>
+                </div>
+            </div>
+            <div class="row justify-content-center mb-4">
+                <div class="test-portfolio col-5 mx-2 mx-md-5"></div>
+                <div class="test-portfolio col-5 mx-2 mx-md-5"></div>
+            </div>
+            <div class="text-center">
+                <span class="test-wh">TEST</span>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact me -->
+
+    <section class="container-fluid" id="contact-me">
+        <div class="container py-4 px-3 py-md-5">
+            <div class="row">
+                <div class="col-12 d-flex flex-column justify-content-center align-items-center">
+                    <div class="test-title mb-3"></div>
+                    <div class="test-title mb-3"></div>
+                </div>
+            </div>
+            <div class="mx-2 mx-md-5">
+                <div class="test-title mb-3"></div>
+                <hr>
+                <div class="test-title mb-3"></div>
+                <hr>
+                <div class="test-title mb-3"></div>
+                <hr>
+                <div class="test-portfolio"></div>
+                <hr>
+                <span class="test-wh">TEST</span>
+            </div>
+        </div>
+    </section>
 </main>
+
+<!-- Footer -->
+
+<footer class="container-fluid">
+    <div class="container py-4 px-3 py-md-5"></div>
+
+</footer>
 </body>
 </html>
