--- a/index.html
+++ b/index.html
@@ -10,21 +10,29 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<header class="container-fluid">
-    <div class="container h-100">
-        <div class="row h-100 align-items-center">
-            <div class="col d-flex justify-content-between align-items-center">
-                    <div class="test-wh"></div>               
-                    <nav>
-                        <span class="border border-info d-md-none">Test</span>
-                        <ul class="list-inline d-none d-md-block">
-                            <li class="test-wh list-inline-item"></li>
-                            <li class="test-wh list-inline-item"></li>
-                            <li class="test-wh list-inline-item"></li>
-                        </ul>
-                    </nav>
+<header class="bgc-grey">
+    <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-dark bgc-grey">
+            <div class="container-fluid">
+                <a class="navbar-brand text-white fw-bold" href="#">START BOOTSTRAP</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse flex-grow-0" id="navbarNav">
+                    <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link text-white fw-bold" href="#">PORTFOLIO</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white fw-bold" href="#">ABOUT</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white fw-bold">CONTACT</a>
+                    </li>
+                    </ul>
+                </div>
             </div>
-        </div>
+        </nav>
     </div>
 </header>
 <main>
@@ -140,8 +148,17 @@
 
 <!-- Footer -->
 
-<footer class="container-fluid">
-    <div class="container py-4 px-3 py-md-5"></div>
+<footer>
+    <div class="container-fluid bgc-grey">
+        <div class="container py-4">
+            <div class="row">
+                <div class="col col-md-3">< /div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid bgc-darkgrey"></div>
+
+    </div>
 
 </footer>
 </body>
