--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<header class="bgc-grey">
+<header class="_bgc-grey">
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-dark bgc-grey">
             <div class="container-fluid">
@@ -39,17 +39,21 @@
 
     <!-- Start Bootstrap -->
 
-    <section class="container-fluid bgc-green mb-5 py-5" id="start-bootstrap">
+    <section class="_bgc-green mb-5 py-5" id="start-bootstrap">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col">
-                    <div class="card d-flex align-items-center mb-2">
-                            <div class="test-bl mb-2"><!-- <img src="" alt=""> --></div>
-                            <h1 class="test-title h3 mb-2"></h1>
-                            <div class="test-title mb-2"></div>
-                            <div class="test-title"></div>
-                    </div>
+                <div class="col-6 col-md-4 col-lg-3">
+                        <img class="mb-2 mb-md-4" src="img/avatar.svg" alt="Avatar">
                 </div>
+            </div>
+            <div class="row flex-column align-items-center justify-content-center text-center">
+                <h1 class="text-white fs-1 mb-2">START BOOTSTRAP</h1>
+                <div class="col-6 mb-2 d-flex justify-content-center align-items-center">
+                    <div class="_w-line w-25"></div>
+                    <i class="bi bi-star-fill text-white mx-3"></i>
+                    <div class="_w-line w-25"></div>
+                </div>
+                <p class="fs-4 text-white">GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</p>
             </div>
         </div>
     </section>
@@ -103,7 +107,7 @@
 
     <!-- About -->
 
-    <section class="container-fluid mb-5 bgc-green" id="about">
+    <section class="container-fluid mb-5 _bgc-green" id="about">
         <div class="container py-4 px-3 py-md-5">
             <div class="row">
                 <div class="col-12 d-flex flex-column align-items-center">
@@ -149,14 +153,14 @@
 <!-- Footer -->
 
 <footer>
-    <div class="container-fluid bgc-grey">
+    <div class="container-fluid _bgc-grey">
         <div class="container py-4">
             <div class="row">
                 <div class="col col-md-3">< /div>
             </div>
         </div>
     </div>
-    <div class="container-fluid bgc-darkgrey"></div>
+    <div class="container-fluid _bgc-darkgrey"></div>
 
     </div>
 
