--- a/index.html
+++ b/index.html
@@ -39,69 +39,61 @@
 
     <!-- Start Bootstrap -->
 
-    <section class="_bgc-green mb-5 py-5" id="start-bootstrap">
+    <section class="_bgc-green mb-5 py-3" id="start-bootstrap">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-6 col-md-4 col-lg-3">
-                        <img class="mb-2 mb-md-4" src="img/avatar.svg" alt="Avatar">
+                        <img class="mb-3 mb-md-5" src="img/avatar.svg" alt="Avatar">
                 </div>
             </div>
             <div class="row flex-column align-items-center justify-content-center text-center">
-                <h1 class="text-white fs-1 mb-2">START BOOTSTRAP</h1>
-                <div class="col-6 mb-2 d-flex justify-content-center align-items-center">
-                    <div class="_w-line w-25"></div>
-                    <i class="bi bi-star-fill text-white mx-3"></i>
-                    <div class="_w-line w-25"></div>
+                <div class="col-12 d-flex flex-column justify-content-center align-items-center">
+                    <h1 class="text-white fs-1 mb-2">START BOOTSTRAP</h1>
+                    <div class="w-50 w-md-75 d-flex justify-content-center align-items-center">
+                        <div class="_w-line w-25"></div>
+                        <i class="bi bi-star-fill text-white mx-3"></i>
+                        <div class="_w-line w-25"></div>
+                    </div>
+                    <p class="fs-4 text-white">GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</p>
                 </div>
-                <p class="fs-4 text-white">GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</p>
             </div>
         </div>
     </section>
 
     <!-- Portfolio -->
 
-    <section class="container-fluid mb-5" id="portfolio">
+    <section class="mb-5" id="portfolio">
         <div class="container">
-            <div class="row">
-                <div class="col-12 d-flex flex-column align-items-center">
-                    <div class="test-title mb-3"></div>
-                    <div class="test-title mb-3"></div>
+            <div class="col-12 d-flex flex-column justify-content-center align-items-center">
+                <h2 class="fs-2 mb-2">PORTFOLIO</h2>
+                <div class="w-75 mb-2 d-flex justify-content-center align-items-center">
+                    <div class="_b-line w-25"></div>
+                    <i class="bi bi-star-fill mx-3"></i>
+                    <div class="_b-line w-25"></div>
                 </div>
             </div>
         </div>
-        <div class="container mb-5">
-            <div class="row gx-4 gy-4 justify-content-center justify-content-sm-center justify-content-md-between">
-                <div class="test-portfolio d-flex justify-content-center align-items-center col-sm-12 col-md-6 col-lg-4">
-                    <div class="test-bl card">
-                        <!-- <img src="" alt=""> -->
-                    </div>
+        <div class="container">
+            <div class="row gx-3 gy-3 justify-content-center justify-content-sm-center justify-content-md-between">
+                <div class="d-flex justify-content-center align-items-center col-sm-12 col-md-6 col-lg-4">
+                    <img class="w-100 rounded-2" src="img/cabin.png" alt="Cabin">
                 </div>
-                <div class="test-portfolio d-flex justify-content-center align-items-center col-12 col-md-6 col-lg-4">
-                    <div class="test-bl card">
-                        <!-- <img src="" alt=""> -->
-                    </div>
+                <div class="d-flex justify-content-center align-items-center col-sm-12 col-md-6 col-lg-4">
+                    <img class="w-100 rounded-2" src="img/cake.png" alt="Cake">
                 </div>
-                <div class="test-portfolio d-flex justify-content-center align-items-center col-12 col-md-6 col-lg-4">
-                    <div class="test-bl card">
-                        <!-- <img src="" alt=""> -->
-                    </div>
+                <div class="d-flex justify-content-center align-items-center col-sm-12 col-md-6 col-lg-4">
+                    <img class="w-100 rounded-2" src="img/circus.png" alt="Circus">
                 </div>
-                <div class="test-portfolio d-flex justify-content-center align-items-center col-12 col-md-6 col-lg-4">
-                    <div class="test-bl card">
-                        <!-- <img src="" alt=""> -->
-                    </div>
+                <div class="d-flex justify-content-center align-items-center col-sm-12 col-md-6 col-lg-4">
+                    <img class="w-100 rounded-2" src="img/game.png" alt="Game">
                 </div>
-                <div class="test-portfolio d-flex justify-content-center align-items-center col-12 col-md-6 col-lg-4">
-                    <div class="test-bl card">
-                        <!-- <img src="" alt=""> -->
-                    </div>
+                <div class="d-flex justify-content-center align-items-center col-sm-12 col-md-6 col-lg-4">
+                    <img class="w-100 rounded-2" src="img/safe.png" alt="Safe">
                 </div>
-                <div class="test-portfolio d-flex justify-content-center align-items-center col-12 col-md-6 col-lg-4">
-                    <div class="test-bl card">
-                        <!-- <img src="" alt=""> -->
-                    </div>
+                <div class="d-flex justify-content-center align-items-center col-sm-12 col-md-6 col-lg-4">
+                    <img class="w-100 rounded-2" src="img/submarine.png" alt="Submarine">
                 </div>
-           </div>
+            </div>
         </div>
     </section>
 
