--- a/index.html
+++ b/index.html
@@ -64,16 +64,16 @@
 
     <section class="mb-5" id="portfolio">
         <div class="container">
-            <div class="col-12 d-flex flex-column justify-content-center align-items-center">
-                <h2 class="fs-2 mb-2">PORTFOLIO</h2>
-                <div class="w-75 mb-2 d-flex justify-content-center align-items-center">
-                    <div class="_b-line w-25"></div>
-                    <i class="bi bi-star-fill mx-3"></i>
-                    <div class="_b-line w-25"></div>
+            <div class="row">
+                <div class="col-12 d-flex flex-column justify-content-center align-items-center">
+                    <h2 class="fs-2 mb-2">PORTFOLIO</h2>
+                    <div class="w-75 mb-2 d-flex justify-content-center align-items-center">
+                        <div class="_b-line w-25"></div>
+                        <i class="bi bi-star-fill mx-3"></i>
+                        <div class="_b-line w-25"></div>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="container">
             <div class="row gx-3 gy-3 justify-content-center justify-content-sm-center justify-content-md-between">
                 <div class="d-flex justify-content-center align-items-center col-sm-12 col-md-6 col-lg-4">
                     <img class="w-100 rounded-2" src="img/cabin.png" alt="Cabin">
@@ -99,7 +99,7 @@
 
     <!-- About -->
 
-    <section class="container-fluid mb-5 _bgc-green" id="about">
+    <section class="mb-5 _bgc-green" id="about">
         <div class="container py-4 px-3 py-md-5">
             <div class="row">
                 <div class="col-12 d-flex flex-column align-items-center">
