--- a/index.html
+++ b/index.html
@@ -99,20 +99,29 @@
 
     <!-- About -->
 
-    <section class="mb-5 _bgc-green" id="about">
+    <section class="mb-5 _bgc-green text-white" id="about">
         <div class="container py-4 px-3 py-md-5">
             <div class="row">
-                <div class="col-12 d-flex flex-column align-items-center">
-                    <div class="test-title mb-3"></div>
-                    <div class="test-title mb-3"></div>
+                <div class="col-12 d-flex flex-column justify-content-center align-items-center">
+                    <h2 class="fs-2 fs-md-1 mb-3">ABOUT</h2>
+                    <div class="w-50 mb-4 d-flex justify-content-center align-items-center">
+                        <div class="_w-line w-25"></div>
+                        <i class="bi bi-star-fill mx-3"></i>
+                        <div class="_w-line w-25"></div>
+                    </div>
                 </div>
             </div>
-            <div class="row justify-content-center mb-4">
-                <div class="test-portfolio col-5 mx-2 mx-md-5"></div>
-                <div class="test-portfolio col-5 mx-2 mx-md-5"></div>
-            </div>
-            <div class="text-center">
-                <span class="test-wh">TEST</span>
+
+            <div class="row justify-content-center">
+                <div class="col-10 col-md-5">
+                    <p class="fs-4 fs-md-1 mb-4">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                </div>
+                <div class="col-10 col-md-5 mb-3">
+                    <p class="fs-4 fs-md-1">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+                </div>
+                <div class="text-center">
+                    <button type="button" class="btn btn-outline-light fs-4 mb-md-3"><i class="bi bi-box-arrow-down"></i> Download</button>
+                </div>
             </div>
         </div>
     </section>
