--- a/index.html
+++ b/index.html
@@ -128,24 +128,36 @@
 
     <!-- Contact me -->
 
-    <section class="container-fluid" id="contact-me">
-        <div class="container py-4 px-3 py-md-5">
+    <section class="" id="contact-me">
+        <div class="container py-2 px-3 py-md-5">
             <div class="row">
                 <div class="col-12 d-flex flex-column justify-content-center align-items-center">
-                    <div class="test-title mb-3"></div>
-                    <div class="test-title mb-3"></div>
+                    <h2 class="fs-2 mb-2">CONTACT ME</h2>
+                    <div class="w-50 mb-2 d-flex justify-content-center align-items-center">
+                        <div class="_b-line w-25"></div>
+                        <i class="bi bi-star-fill mx-3"></i>
+                        <div class="_b-line w-25"></div>
+                    </div>
                 </div>
             </div>
-            <div class="mx-2 mx-md-5">
-                <div class="test-title mb-3"></div>
-                <hr>
-                <div class="test-title mb-3"></div>
-                <hr>
-                <div class="test-title mb-3"></div>
-                <hr>
-                <div class="test-portfolio"></div>
-                <hr>
-                <span class="test-wh">TEST</span>
+            <div class="row">
+                <div class="offset-1 col-10">
+                    <form>
+                        <div class="mb-3">
+                          <label for="name" class="form-label">Name</label>
+                          <input type="name" class="form-control _no-border" id="name" aria-describedby="name">
+                        </div>
+                        <div class="mb-3">
+                          <label for="email" class="form-label">Email Address</label>
+                          <input type="email" class="form-control _no-border" id="email">
+                        </div>
+                        <div class="mb-3">
+                            <label for="tel" class="form-label">Phone Number</label>
+                            <input type="tel" class="form-control _no-border" id="tel">
+                          </div>
+                        <button type="submit" class="btn btn-primary _btn-bg _no-border">Send</button>
+                      </form>
+                </div>
             </div>
         </div>
     </section>
