--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <!-- Contact me -->
 
     <section class="" id="contact-me">
-        <div class="container py-2 px-3 py-md-5">
+        <div class="container py-2 px-3 py-md-5 mb-3 mb-md-5">
             <div class="row">
                 <div class="col-12 d-flex flex-column justify-content-center align-items-center">
                     <h2 class="fs-2 mb-2">CONTACT ME</h2>
@@ -144,17 +144,25 @@
                 <div class="offset-1 col-10">
                     <form>
                         <div class="mb-3">
-                          <label for="name" class="form-label">Name</label>
-                          <input type="name" class="form-control _no-border" id="name" aria-describedby="name">
+                            <label for="name" class="form-label">Name</label>
+                            <input type="name" class="form-control _no-border" name="name" id="name">
+                            <hr>
                         </div>
                         <div class="mb-3">
-                          <label for="email" class="form-label">Email Address</label>
-                          <input type="email" class="form-control _no-border" id="email">
+                            <label for="email" class="form-label">Email Address</label>
+                            <input type="email" class="form-control _no-border" name="email-address" id="email">
+                            <hr>
                         </div>
                         <div class="mb-3">
                             <label for="tel" class="form-label">Phone Number</label>
-                            <input type="tel" class="form-control _no-border" id="tel">
-                          </div>
+                            <input type="tel" class="form-control _no-border" name="phone" id="tel">
+                            <hr>
+                        </div>
+                        <div class="mb-3">
+                            <label for="text-area" class="form-label">Message</label>
+                            <input type="text-area" class="form-control _no-border  _message-area" name="message" id="text-area">
+                            <hr>
+                        </div>
                         <button type="submit" class="btn btn-primary _btn-bg _no-border">Send</button>
                       </form>
                 </div>
@@ -169,13 +177,11 @@
     <div class="container-fluid _bgc-grey">
         <div class="container py-4">
             <div class="row">
-                <div class="col col-md-3">< /div>
+                <div class="col col-md-3"></div>
             </div>
         </div>
     </div>
     <div class="container-fluid _bgc-darkgrey"></div>
-
-    </div>
 
 </footer>
 </body>
