--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<header class="_bgc-grey">
+<header class="_bgc-darkgrey">
     <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-dark bgc-grey">
+        <nav class="navbar navbar-expand-lg navbar-dark _bgc-darkgrey">
             <div class="container-fluid">
                 <a class="navbar-brand text-white fw-bold" href="#">START BOOTSTRAP</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -129,10 +130,10 @@
     <!-- Contact me -->
 
     <section class="" id="contact-me">
-        <div class="container py-2 px-3 py-md-5 mb-3 mb-md-5">
+        <div class="container py-2 px-5 py-md-5 mb-3 mb-md-5">
             <div class="row">
                 <div class="col-12 d-flex flex-column justify-content-center align-items-center">
-                    <h2 class="fs-2 mb-2">CONTACT ME</h2>
+                    <h2 class="fs-2 fs-md-1 mb-2">CONTACT ME</h2>
                     <div class="w-50 mb-2 d-flex justify-content-center align-items-center">
                         <div class="_b-line w-25"></div>
                         <i class="bi bi-star-fill mx-3"></i>
@@ -145,7 +146,7 @@
                     <form>
                         <div class="mb-3">
                             <label for="name" class="form-label">Name</label>
-                            <input type="name" class="form-control _no-border" name="name" id="name">
+                            <input type="text" class="form-control _no-border" name="name" id="name">
                             <hr>
                         </div>
                         <div class="mb-3">
@@ -160,7 +161,7 @@
                         </div>
                         <div class="mb-3">
                             <label for="text-area" class="form-label">Message</label>
-                            <input type="text-area" class="form-control _no-border  _message-area" name="message" id="text-area">
+                            <input type="text" class="form-control _no-border  _message-area" name="message" id="text-area">
                             <hr>
                         </div>
                         <button type="submit" class="btn btn-primary _btn-bg _no-border">Send</button>
@@ -173,16 +174,42 @@
 
 <!-- Footer -->
 
-<footer>
-    <div class="container-fluid _bgc-grey">
-        <div class="container py-4">
-            <div class="row">
-                <div class="col col-md-3"></div>
+<footer class="_bgc-grey">
+    <div class="container text-white py-5">
+        <div class="row justify-content-md-between">
+            <div class="col-12 col-md-4 gx-3">
+                <div class="text-center mb-4">
+                    <h5>LOCATION</h5>
+                    <p class="fs-5">2215 John Daniel Drive Clark, MO 54243</p>
+                </div>
+            </div>
+
+            <div class="col-12 col-md-4 gx-3 d-flex justify-content-center">
+                <div class="text-center mb-4">
+                    <h5>AROUND THE WEB</h5>
+                      <div class="d-flex align-items-center">
+                        <a class="text-white text-decoration-none border border-white rounded-circle _square mx-1" href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a class="text-white text-decoration-none border border-white rounded-circle _square mx-1" href="#"><i class="fa-brands fa-google-plus-g"></i></a>
+                        <a class="text-white text-decoration-none border border-white rounded-circle _square mx-1" href="#"><i class="fa-brands fa-twitter"></i></a>
+                        <a class="text-white text-decoration-none border border-white rounded-circle _square mx-1"><i class="fa-brands fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-4 gx-1 text-center">
+                <div class="text-center mb-md-3">
+                    <h5>ABOUT FREELANCER</h5>
+                    <p class="fs-5">Freelance is a free to use, open source Bootstrap theme created by <a href="#" class="text-decoration-none link-success">Start Bootstrap</a>.</p>
+                </div>
             </div>
         </div>
     </div>
-    <div class="container-fluid _bgc-darkgrey"></div>
-
+    <div class="container-fluid _bgc-darkgrey p-5">
+            <div class="row">
+                <div class="col-12">
+                    <p class="text-white text-center mb-3">Copyright <i class="fa-regular fa-copyright"></i> Your Website 2019</p>
+                </div>
+            </div>
+    </div>
 </footer>
 </body>
 </html>
