--- a/index.html
+++ b/index.html
@@ -204,11 +204,13 @@
         </div>
     </div>
     <div class="container-fluid _bgc-darkgrey p-5">
+        <div class="container">
             <div class="row">
                 <div class="col-12">
                     <p class="text-white text-center mb-3">Copyright <i class="fa-regular fa-copyright"></i> Your Website 2019</p>
                 </div>
             </div>
+        </div>
     </div>
 </footer>
 </body>
